--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,7 @@ Section: sound
 Priority: optional
 Maintainer: mpd maintainers <pkg-mpd-maintainers@lists.alioth.debian.org>
 Uploaders: Florian Schlichting <fsfs@debian.org>
-Build-Depends: debhelper-compat (= 12),
-               meson (>= 0.21.0),
+Build-Depends: meson (>= 0.21.0),
                libadplug-dev,
                libao-dev,
                libasound2-dev  [linux-any],
