--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,6 +1,7 @@
 option('documentation', type: 'feature', description: 'Build documentation')
-option('html_manual', type: 'boolean', value: true, description: 'Build the HTML manual')
-option('manpages', type: 'boolean', value: true, description: 'Build manual pages')
+option('html_manual', type: 'boolean', value: false, description: 'Build the HTML manual')
+option('manpages', type: 'boolean', value: false, description: 'Build manual pages')
+option('doxygen', type: 'boolean', value: false, description: 'Build doxygen source documentation')
 
 option('syslog', type: 'feature', description: 'syslog support')
 option('inotify', type: 'boolean', value: true, description: 'inotify support (for automatic database update)')
@@ -85,7 +86,7 @@ option('webdav', type: 'feature', description: 'WebDAV support using CURL and Ex
 # Playlist plugins
 #
 
-option('cue', type: 'boolean', value: true, description: 'CUE sheet support')
+option('cue', type: 'boolean', value: false, description: 'CUE sheet support')
 
 #
 # Input plugins
